<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="testquestionVM" type="com.muhammadsapplication.app.modules.testquestion.data.viewmodel.TestquestionVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumndescription"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearTesting"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_13pxh"
                android:paddingStart="@dimen/_13pxh" style="@style/groupStylecornerRadius_2">
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_49pxv"
                    android:layout_width="match_parent"
                    android:text="@{testquestionVM.testquestionModel.txtDescription}"
                    style="@style/txtPoppinsbold16" tools:text="@string/msg_question_1_what"/>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearRowdescription"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_27pxh"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylegray_900cornerRadius">
                    <TextView android:gravity="center_vertical"
                        android:id="@+id/txtDescription1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_17pxv"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@{testquestionVM.testquestionModel.txtDescription1}"
                        style="@style/txtPoppinsregular10_3" tools:text="@string/msg_1_2_3_4_5"/>
                    <FrameLayout android:id="@+id/frameStackdescriptio"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_477pxv"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_marginTop="@dimen/_17pxv" android:layout_width="@dimen/_241pxh">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtDescription2"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{testquestionVM.testquestionModel.txtDescription2}"
                            style="@style/txtPoppinsregular10_3" tools:text="@string/msg_include_iostream_using"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnInsertCode"
                            android:layout_gravity="bottom|start"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_108pxv"
                            android:layout_width="match_parent"
                            android:paddingBottom="@dimen/_27pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_27pxv"
                            android:singleLine="true"
                            android:text="@string/msg_insert_code_snippet"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_1" tools:text="@string/msg_insert_code_snippet"/>
                    </FrameLayout>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAns"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{testquestionVM.testquestionModel.txtAns}"
                    style="@style/txtPoppinsbold16" tools:text="@string/lbl_ans"/>
                <LinearLayout android:id="@+id/linearRowview"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_28pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingEnd="@dimen/_11pxh"
                    android:paddingStart="@dimen/_11pxh"
                    android:paddingTop="@dimen/_6pxv" style="@style/groupStylegray_1">
                    <LinearLayout android:id="@+id/linearCheckbox"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_42pxv"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_2pxh"
                        android:paddingVertical="@dimen/_2pxv" style="@style/groupStyleblue_gray_1">
                        <View
                            android:background="@drawable/rectangle_bg_green_900_radius_5"
                            android:id="@+id/viewView"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="@dimen/_15pxh" android:layout_width="@dimen/_15pxh"/>
                    </LinearLayout>
                    <TextView android:id="@+id/txtDescription3"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_22pxv"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@{testquestionVM.testquestionModel.txtDescription3}"
                        style="@style/txtPoppinsbold16_1" tools:text="@string/msg_for_int_i_0"/>
                </LinearLayout>
                <FrameLayout android:id="@+id/frameOption1"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_85pxv"
                    android:layout_marginTop="@dimen/_7pxv" android:layout_width="@dimen/_277pxh">
                    <LinearLayout android:id="@+id/linearColumnviewOne"
                        android:layout_gravity="top|center"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_11pxh"
                        android:paddingStart="@dimen/_11pxh"
                        android:paddingTop="@dimen/_10pxv" style="@style/groupStylegray_1">
                        <View
                            android:background="@drawable/rectangle_bg_blue_gray_100_radius_5"
                            android:id="@+id/viewViewOne"
                            android:layout_height="@dimen/_17pxh"
                            android:layout_marginBottom="@dimen/_42pxv" android:layout_width="@dimen/_17pxh"/>
                    </LinearLayout>
                    <TextView android:id="@+id/txtDescription4"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_47pxh"
                        android:layout_width="wrap_content"
                        android:text="@{testquestionVM.testquestionModel.txtDescription4}"
                        style="@style/txtPoppinsbold16_1" tools:text="@string/msg_for_int_i_02"/>
                </FrameLayout>
                <LinearLayout android:id="@+id/linearRowviewTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_28pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/_9pxv"
                    android:paddingEnd="@dimen/_11pxh"
                    android:paddingStart="@dimen/_11pxh"
                    android:paddingTop="@dimen/_9pxv" style="@style/groupStylegray_1">
                    <View
                        android:background="@drawable/rectangle_bg_blue_gray_100_radius_5"
                        android:id="@+id/viewViewTwo"
                        android:layout_height="@dimen/_17pxh"
                        android:layout_marginBottom="@dimen/_43pxv"
                        android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_17pxh"/>
                    <TextView android:id="@+id/txtDescription5"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_19pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@{testquestionVM.testquestionModel.txtDescription5}"
                        style="@style/txtPoppinsbold16_1" tools:text="@string/msg_for_int_i_03"/>
                </LinearLayout>
                <FrameLayout android:id="@+id/frameStackchecktwo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_107pxv"
                    android:layout_marginTop="@dimen/_7pxv" android:layout_width="@dimen/_315pxh">
                    <LinearLayout android:id="@+id/linearRowchecktwoOne"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_57pxv"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingEnd="@dimen/_10pxh"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_13pxv" style="@style/groupStylegreen_900cornerRadius">
                        <ImageView android:id="@+id/imageChecktwoOne"
                            android:layout_gravity="center_vertical"
                            android:layout_height="@dimen/_24pxh"
                            android:layout_width="@dimen/_24pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_check2"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_check2"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtCorrect"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@{testquestionVM.testquestionModel.txtCorrect}"
                            style="@style/txtPoppinsbold16" tools:text="@string/lbl_correct"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linearRowviewThree"
                        android:layout_gravity="top|center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_28pxv"
                        android:layout_marginEnd="@dimen/_22pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/_9pxv"
                        android:paddingEnd="@dimen/_11pxh"
                        android:paddingStart="@dimen/_11pxh"
                        android:paddingTop="@dimen/_9pxv" style="@style/groupStylegray_1">
                        <View
                            android:background="@drawable/rectangle_bg_blue_gray_100_radius_5"
                            android:id="@+id/viewViewThree"
                            android:layout_height="@dimen/_17pxh"
                            android:layout_marginBottom="@dimen/_43pxv"
                            android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_17pxh"/>
                        <TextView android:id="@+id/txtDescription6"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_19pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:text="@{testquestionVM.testquestionModel.txtDescription6}"
                            style="@style/txtPoppinsregular10_3" tools:text="@string/msg_for_i_1_to_le"/>
                    </LinearLayout>
                </FrameLayout>
                <ImageView android:id="@+id/imageContrastOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="@dimen/_58pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_contrast_blue_gray_100"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_contrast_blue_gray_100"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
