<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.muhammadsapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <ScrollView android:clipToPadding="false"
        android:fillViewport="true"
        android:id="@+id/scrollViewScrollview"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleblue_900">
        <LinearLayout android:id="@+id/linearColumn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearColumnemail"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <FrameLayout android:id="@+id/frameStackemail"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_44pxv"
                    android:layout_width="@dimen/_306pxh" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtEmail"
                        android:layout_gravity="top|start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_55pxh"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtEmail}"
                        style="@style/txtPoppinsregular18" tools:text="@string/lbl_email"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_white_a700_border_gray_600_68_radius_10"
                        android:drawablePadding="@dimen/_12pxh"
                        android:ellipsize="end"
                        android:hint="@string/lbl_email"
                        android:id="@+id/etEmail"
                        android:inputType="text"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_14pxh"
                        android:paddingTop="@dimen/_8pxv"
                        android:singleLine="true"
                        android:text="@={loginVM.loginModel.etEmailValue}"
                        android:textColorHint="@color/gray_600_01"
                        style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                </FrameLayout>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_600_68_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etPasswordValue}"
                    android:textColorHint="@color/gray_600_01"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotpassword"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtForgotpassword}"
                    style="@style/txtPoppinsregular14" tools:text="@string/lbl_forgot_password"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSignIn"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_in"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_sign_in"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearRowgooglefab"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageButton android:id="@+id/btnGooglefabOne"
                        android:layout_gravity="bottom"
                        android:layout_height="@dimen/_41pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="@dimen/_41pxh"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_googlefab" tools:ignore="ContentDescription"/>
                    <ImageButton android:id="@+id/btnFacebookfabOne"
                        android:layout_gravity="bottom"
                        android:layout_height="@dimen/_41pxh"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="@dimen/_41pxh"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_facebookfab" tools:ignore="ContentDescription"/>
                    <ImageButton android:id="@+id/btnApplefabOne"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_45pxh"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_width="@dimen/_45pxh"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_applefab" tools:ignore="ContentDescription"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
